.container style overflow-x: hidden; solución bug header/footer

--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -249,6 +249,10 @@ textarea {
     display: inline-flex;
 }
 
+.container{
+    overflow-x: hidden;
+}
+
 #drow-fases {
     display: flex;
     align-items: center;
